[package]
name = "orbit-sense"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
egui = "0.31"
egui-macroquad = { version = "0.17.3", default-features = false }
env_logger = "0.11.9"
geo-types = "0.7.18"
geocoding = { version = "0.4.0", features = ["rustls-tls"] }
macroquad = { version = "0.4.14", default-features = false, features = ["glam-serde"] }
nav-types = "0.5.2"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sgp4 = "2.4.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "full"] }
