[package]
name = "orbit-sense"
version = "0.2.0"
edition = "2024"
authors = ["Arunkumar Mourougappane <amouroug.dev@gmail.com>"]
description = "A real-time satellite tracking application with 2D map visualization, orbital pass prediction, and live telemetry."
license = "MIT"
repository = "https://github.com/arunkumar-mourougappane/orbit-sense"
homepage = "https://github.com/arunkumar-mourougappane/orbit-sense"
documentation = "https://github.com/arunkumar-mourougappane/orbit-sense#readme"
keywords = ["satellite", "tracking", "space", "tle", "sgp4"]
categories = ["science", "visualization", "gui"]
readme = "README.md"

[dependencies]
chrono = "0.4.44"
eframe = { version = "0.33.3", features = ["persistence"] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
env_logger = "0.11.9"
geo-types = "0.7.18"
geocoding = { version = "0.4.0", features = ["rustls-tls"] }
image = "0.25.9"
nav-types = "0.5.2"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sgp4 = "2.4.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "full"] }
walkers = "0.52.0"
